--- a/app/views/items/status_detail.haml
+++ b/app/views/items/status_detail.haml
@@ -3,6 +3,6 @@
   = link_to_function "detail", "$(this).next('.detail').toggle()"
   .detail{:style => "display:none"}
     - @item_parser.placement_hash.values.each do |placement|
-      - url = "#{request.protocol}#{request.host_with_port}/#{placement.path}"
+      - url = "#{request.protocol}#{ENV['HOST_CDN']}/#{placement.path}"
       = link_to url, url
       %br/
