--- a/app/views/items/show.haml
+++ b/app/views/items/show.haml
@@ -18,9 +18,13 @@
       %td{:valign => "top"}= h doc.example_url
       %td{:valign => "top"}= h doc.parsed
       %td{:valign => "top"}
-        = link_to "update", item_path(doc), :remote => true, :method => "PUT", "update" => "status#{doc.id}"
+        = link_to "update", item_path(doc), :remote => true, :method => "PUT", "update" => "status#{doc.id}", :class => "update_link"
         -#= link_to_remote "update", :url => {:action => "update", :id => doc.id}, :update => "status#{doc.id}"
         /%a{:href => url_for(:action => "parse", :id => doc.id), "data-remote" => "true", "data-update-success" => "result"} parse
       %td{:id => "status#{doc.id}", :valign => "top"}
         %span{:title => doc.status}= h doc.status[0,75]
         
+%script
+  $('.update_link').click(function() {
+  $(this).parent().html('working');
+  });
